--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "express": "^4.18.1",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
-    "swagger-autogen": "^2.22.0"
+    "swagger-autogen": "^2.22.0",
+    "swagger-ui-express": "^4.5.0"
   }
 }
