--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CheeseHacks 2022 Registration and Scheduling Website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon server/index"
   },
   "repository": {
     "type": "git",
@@ -17,16 +18,31 @@
   },
   "homepage": "https://github.com/WebDev-UW/cheesehacks2022#readme",
   "dependencies": {
+    "@babel/preset-react": "^7.18.6",
+    "babel": "^6.23.0",
+    "babel-loader": "^8.2.5",
+    "bootstrap": "^5.2.2",
+    "css-loader": "^6.7.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "lodash": "^4.17.21",
+    "mini-css-extract-plugin": "^2.6.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
     "swagger-autogen": "^2.22.0",
-    "swagger-ui-express": "^4.5.0"
+    "swagger-ui-express": "^4.5.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-middleware": "^5.3.3",
+    "webpack-hot-middleware": "^2.25.2"
   }
 }
