--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "lodash": "^4.17.21",
+    "mime": "^3.0.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
