--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "swagger-autogen": "^2.22.0",
     "swagger-ui-express": "^4.5.0",
     "webpack": "^5.74.0",
