--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel": "^6.23.0",
     "babel-loader": "^8.2.5",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.9.1",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
