Fleshed out the Admin page by adding more tables. Started work on front-end checkin system.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "file-loader": "^6.2.0",
+    "fuse.js": "^6.6.2",
     "html-webpack-plugin": "^5.5.0",
     "lodash": "^4.17.21",
     "mime": "^3.0.0",
